# uv-fastapi-cloudrun

./: .gcloudignore  README.md  deploy-cloud-run-service.yaml  pyproject.toml
diagram/: uv_fastapi_cloud_run.excalidraw  uv_fastapi_cloud_run_author.excalidraw
team_league/service/: Dockerfile
